# daemon-utils

client/: CMakeLists.txt
client/include/daemon_utils/: daemon_launcher.h  launchable_service_client.h
client/src/: daemon_launcher.cpp
server/: CMakeLists.txt
server/include/daemon_utils/: auto_shutdown_service.h
